--- a/.gitignore
+++ b/.gitignore
@@ -167,4 +167,5 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+postgres_data
 # End of https://www.toptal.com/developers/gitignore/api/node,windows
