--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "scripts": {
         "dev": "nodemon api/index.js",
         "start": "node api/index.js",
-        "lint": "eslint"
+        "lint": "eslint",
+        "migrations:generate": "sequelize-cli migration:generate --name",
+        "migrations:run": "sequelize-cli db:migrate",
+        "migrations:revert": "sequelize-cli db:migrate:undo:all"
+
     },
     "keywords": [],
     "author": "",
@@ -16,13 +20,19 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.1.3",
         "nodemon": "^3.0.3",
-        "prettier": "^3.2.4"
+        "prettier": "^3.2.4",
+        "sequelize-cli": "^6.6.2"
     },
     "dependencies": {
         "@faker-js/faker": "^8.4.0",
         "@hapi/boom": "^10.0.1",
         "cors": "^2.8.5",
+        "dotenv": "^16.4.1",
         "express": "^4.18.2",
-        "joi": "^17.12.1"
+        "joi": "^17.12.1",
+        "mysql2": "^3.9.1",
+        "pg": "^8.11.3",
+        "pg-hstore": "^2.3.4",
+        "sequelize": "^6.36.0"
     }
 }
